# handover_policy

./: .gitignore  .gitmodules  README.md  requmnet.txt
docs/: 调试清单.md
docs/superpowers/specs/: 2026-04-17-ur5-rtde-servo-tracking-design.md
src/cam_pre/: CMakeLists.txt  package.xml
src/cam_pre/config/: .gitignore  config.yaml
src/cam_pre/include/camera/: camera_preprocess_node.hpp  preprocess_pipeline.hpp
src/cam_pre/launch/: cam_preprocess.launch.py
src/cam_pre/src/: camera_preprocess_node.cpp  main.cpp  preprocess_pipeline.cpp
src/camera/: CMakeLists.txt  package.xml
src/camera/config/: preprocess.yaml
src/camera/include/camera/: preprocess_node.hpp
src/camera/launch/: cam_preprocess.launch.py  preprocess.launch.py
src/camera/src/: main.cpp  preprocess_node.cpp
src/fastfoundation/: package.xml  setup.cfg  setup.py
src/fastfoundation/fastfoundation/: fastfoundation.py
src/fastfoundation/fastfoundation/model_api/: api.py
src/fastfoundation/launch/: launch_fastfoundation.launch.py
src/fastfoundation/weight/: .gitignore
src/hand_detector/: package.xml  setup.cfg  setup.py
src/hand_detector/config/: config.yaml
src/hand_detector/hand_detector/: hand_detector_node.py
src/hand_detector/launch/: hand_detector.launch.py
src/hand_detector/weights/: .gitignore
src/handover_task/: package.xml  setup.cfg  setup.py
src/handover_task/config/: .gitignore
src/handover_task/handover_task/: base_policy.py  linear_cv_kalman.py
src/handover_task/launch/: base_policy.launch.py
src/handover_task_interfaces/: CMakeLists.txt  package.xml
src/handover_task_interfaces/srv/: BasePolicy.srv
src/motion_state_estimator/: README.md  package.xml  setup.cfg  setup.py
src/motion_state_estimator/config/: grasp_pose_predictor.yaml  pc_mask_box.json
src/motion_state_estimator/launch/: grasp_pose_predictor.launch.py
src/motion_state_estimator/motion_state_estimator/: grasp_pose_predictor_node.py
src/motion_state_estimator/resource/: motion_state_estimator
src/pc_processor/: CMakeLists.txt  README.md  package.xml
src/pc_processor/config/: .gitignore  depth_to_cloud.yaml  perception.yaml
src/pc_processor/include/pc_processor/: depth_to_cloud_node.hpp  pc_pipeline.hpp  pc_processor_utils.hpp  perception_node.hpp
src/pc_processor/launch/: depth_to_cloud.launch.py  perception.launch.py
src/pc_processor/src/: depth_to_cloud_node.cpp  main.cpp  pc_pipeline.cpp  pc_processor_utils.cpp  perception_node.cpp
src/ur5_pose_tracker/: README.md  package.xml  setup.cfg  setup.py
src/ur5_pose_tracker/config/: .gitignore  pose_tracker.yaml
src/ur5_pose_tracker/launch/: pose_tracker.launch.py
src/ur5_pose_tracker/resource/: ur5_pose_tracker
src/ur5_pose_tracker/test/: .gitignore  test_import_package.py  test_launch_file_exists.py  test_pose_tracker_node.py  test_readme_commands.py
src/ur5_pose_tracker/ur5_pose_tracker/: pose_tracker_node.py
src/ur_robotiq/: README.md  package.xml  setup.cfg  setup.py
src/ur_robotiq/launch/: pose_tracker.launch.py
src/ur_robotiq/resource/: ur_robotiq
src/ur_robotiq/ur_robotiq/: __init__.py  control.py  pose_tracker_node.py
src/ur_robotiq_interfaces/: CMakeLists.txt  package.xml
