<?xml version="1.0"?>
<package format="3">
  <name>camera</name>
  <version>0.1.0</version>
  <description>Camera preprocess: undistort (extensible pipeline).</description>
  <maintainer email="ender@example.com">ender</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
